<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background_blur"
    tools:context=".CreditsActivity">

    <TextView
        android:id="@+id/credits_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/neuropol"
        android:text="@string/credits_menu_name"
        android:textAllCaps="true"
        android:textColor="#9AFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/credits_menu_authors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credits_menu_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/neuropol"
        android:gravity="center"
        android:text="@string/credits_menu_authors"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="#9AFFFF"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/credits_menu_back_btn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/selector_back" />

</RelativeLayout>